# MeluriAI

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  setup.ps1  setup.sh
.github/workflows/: ci.yml
backend/: .env.example  .env.production.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/src/: __init__.py  main.py
backend/tests/: __init__.py
contracts/: .gitkeep  foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: .gitkeep  SmartRouter.sol  SmartVault.sol
contracts/src/adapters/: BaseStrategyAdapter.sol
contracts/src/interfaces/: ISmartRouter.sol  ISmartVault.sol  IStrategyAdapter.sol
contracts/test/: BaseContracts.t.sol  SmartRouter.t.sol  SmartVault.t.sol
contracts/test/mocks/: MockERC20.sol  MockStrategyAdapter.sol
frontend/: .env.example  .env.production.example  package.json
frontend/src/app/: layout.tsx  page.tsx
ml/: .env.example  __init__.py  requirements.txt
